--- a/django/postgres-deployment.yaml
+++ b/django/postgres-deployment.yaml
@@ -21,17 +21,20 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_DB
-              value: your_database_name
+              valueFrom:
+                configMapKeyRef:
+                  name: whg-config
+                  key: db-name
             - name: POSTGRES_USER
               valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: postgres-username
+                configMapKeyRef:
+                  name: whg-config
+                  key: db-user
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres-secret
-                  key: postgres-password
+                  name: whg-secret
+                  key: db-password
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
