--- a/django/postgres-deployment.yaml
+++ b/django/postgres-deployment.yaml
@@ -19,6 +19,7 @@ spec:
           image: postgis/postgis:15-3.4
           ports:
             - containerPort: 5432
+          command: [ "postgres", "-c", "hba_file=/etc/postgresql/pg_hba.conf" ]
           env:
             - name: POSTGRES_DB
               valueFrom:
@@ -38,6 +39,9 @@ spec:
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
+            - name: pg-hba-config
+              mountPath: /etc/postgresql/pg_hba.conf
+              subPath: pg-hba
           livenessProbe:
             tcpSocket:
               port: 5432
@@ -55,3 +59,6 @@ spec:
         - name: postgres-data
           persistentVolumeClaim:
             claimName: postgres-pvc
+        - name: pg-hba-config
+          configMap:
+            name: whg-config
