--- a/system/kubernetes-config.yaml
+++ b/system/kubernetes-config.yaml
@@ -1,3 +1,4 @@
 kubernetes:
-  version: "v1.28.0"
+  repo_url: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
+  version: "1.30.7-1.1"
   pod_network_cidr: "10.244.0.0/16"
