--- a/tileserver/tileserver-gl-pvc.yaml
+++ b/tileserver/tileserver-gl-pvc.yaml
@@ -7,4 +7,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi  # Adjust size as needed based on your tile data
+      storage: 10Gi  # Adjust size as needed based on anticipated tile data
