--- a/django/pgbackrest-pvc.yaml
+++ b/django/pgbackrest-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: pgbackrest-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: django-postgres
+  storageClassName: django-pgbackrest
