--- a/configmap.yaml
+++ b/configmap.yaml
@@ -27,45 +27,48 @@ data:
     archive_mode = on
     archive_command = 'pgbackrest --stanza=whgdb archive-push %p'
 
-  # pgBackRest configuration
-  pgbackrest.conf: |
-    [global]
-    repo1-path=/var/lib/pgbackrest/backups # This is the mounted path of the pgbackrest-pv
-    repo1-retention-full=2
-    log-level-console=info
-
-    [global:archive-push]
-    compress-level=3
-
-    [whgdb] # This matches the stanza name used in the `pgbackrest-stanza-init.yaml` Job below
-    pg1-path=/var/lib/postgresql/data # This is the mounted path of the postgres-pv
-
-  pgbackrest-stanza-init.yaml: |
-    apiVersion: batch/v1
-    kind: Job
-    metadata:
-      name: pgbackrest-stanza-init
-    spec:
-      template:
-        spec:
-          containers:
-            - name: pgbackrest
-              image: pgbackrest/pgbackrest:latest
-              command:
-                - pgbackrest
-                - --stanza=whgdb
-                - stanza-create
-              volumeMounts:
-                - name: pgbackrest-config
-                  mountPath: /etc/pgbackrest
-                  subPath: pgbackrest.conf
-                - name: postgres-data
-                  mountPath: /var/lib/postgresql/data
-          restartPolicy: Never
-          volumes:
-            - name: pgbackrest-config
-              configMap:
-                name: whg-config
-            - name: postgres-data
-              persistentVolumeClaim:
-                claimName: postgres-pvc
+#  # pgBackRest configuration
+#  pgbackrest.conf: |
+#    [global]
+#    repo1-path=/var/lib/pgbackrest/backups # This is the mounted path of the pgbackrest-pv
+#    repo1-retention-full=2
+#    log-level-console=info
+#
+#    [global:archive-push]
+#    compress-level=3
+#
+#    [whgdb] # This matches the stanza name used in the `pgbackrest-stanza-init.yaml` Job below
+#    pg1-path=/var/lib/postgresql/data # This is the mounted path of the postgres-pv
+#
+#  pgbackrest-stanza-init.yaml: |
+#    apiVersion: batch/v1
+#    kind: Job
+#    metadata:
+#      name: pgbackrest-stanza-init
+#    spec:
+#      template:
+#        spec:
+#          containers:
+#            - name: pgbackrest
+#              image: pgbackrest/pgbackrest:latest
+#              command:
+#                - pgbackrest
+#                - --stanza=whgdb
+#                - stanza-create
+#              volumeMounts:
+#                - name: pgbackrest-config
+#                  mountPath: /etc/pgbackrest
+#                  subPath: pgbackrest.conf
+#                - name: pgbackrest-config
+#                  mountPath: /etc/pgbackrest/pgbackrest-stanza-init.yaml
+#                  subPath: pgbackrest-stanza-init.yaml
+#                - name: postgres-data
+#                  mountPath: /var/lib/postgresql/data
+#          restartPolicy: Never
+#          volumes:
+#            - name: pgbackrest-config
+#              configMap:
+#                name: whg-config
+#            - name: postgres-data
+#              persistentVolumeClaim:
+#                claimName: postgres-pvc
