--- a/django/pgbackrest-pv.yaml
+++ b/django/pgbackrest-pv.yaml
@@ -11,3 +11,12 @@ spec:
   storageClassName: django-pgbackrest
   local:
     path: /data/k8s/pgbackrest
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - localhost
+                - desktop
