--- a/system/kubernetes-config.yaml
+++ b/system/kubernetes-config.yaml
@@ -1,4 +1,3 @@
 kubernetes:
-  repo_url: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
-  version: "1.30.7-1.1"
-  pod_network_cidr: "10.244.0.0/16"
+  pod_network_cidr: "10.244.0.0/16,fd00::/48"
+  service_cidr: "10.96.0.0/12,fd00:abcd:1234::/112"
