Django pods OK (except webpack)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# Ignore Kubernetes secrets
-secret.yaml
-
 # Ignore PyCharm files
 .idea/
 
-# Ignore Django secret configuration
-whg-secrets.py
-ca-cert.pem
-local_settings.py
+# Ignore Django secret configuration files
+.whg-private/
