--- a/pgbackrest/Dockerfile
+++ b/pgbackrest/Dockerfile
@@ -3,19 +3,9 @@ FROM postgis/postgis:15-3.4
 
 # Install pgBackRest using apt-get
 RUN apt-get update && \
-    apt-get install -y pgbackrest
-
-# Optional: Add pgBackRest config files to the container
-# COPY pgbackrest.conf /etc/pgbackrest/
-
-# Expose necessary ports (example for PostgreSQL)
-EXPOSE 5432
-
-# Set the entrypoint to run PostgreSQL as usual
-ENTRYPOINT ["docker-entrypoint.sh"]
-
-# Command to run PostgreSQL
-CMD ["postgres"]
+    apt-get install -y nano rsync pgbackrest && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 ## In this directory, build the Docker image:
 #docker login
